# google-cloud-experiments

./: .env.development  .env.example  .env.production  .gitignore  Makefile  README.md  hierarchy_plan.txt  policy_override.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: adc_and_workload_identity.md  build_tools_comparison.md  config_formats_comparison.md  gcp_app_engine_study_guide.md  gcp_architect_case_studies.md  gcp_cloud_functions_study_guide.md  gcp_compute_engine_study_plan.md  gcp_concepts_summary.md  gcp_gke_study_guide.md  gcp_logging_foundation.md  gcp_marketplace_and_endpoints_summary.md  gcp_network_pillars.md  gcp_networking_hybrid.md  gcp_networking_load_balancing.md  gcp_networking_security.md  gcp_networking_vpc_core.md  gcp_pca_exam_tips.md  hierarchy_lab.md  setup_cloud_identity_org.md  stateful_vs_stateless.md
docs/architectures/: multiplayer_game_multi_database_architecture.md
docs/compute/: gcp_app_engine_study_guide.md  gcp_cloud_functions_study_guide.md  gcp_compute_engine_study_plan.md  gcp_eventarc_deep_dive.md  gcp_gke_study_guide.md  os_concepts.md  os_essentials_for_pms.md  pca_practice_questions_compute.md  stateful_vs_stateless.md
docs/databases/: alloydb.md  bigquery.md  bigtable.md  cap_theorem_pca.md  cloud_data_fusion.md  cloud_spanner.md  cloud_sql.md  data_warehouse_comparison_reference.md  database_decision_guide.md  dataform.md  firestore.md  gcp_databases_pca_cram_sheet.md  (+4 more)
scripts/: setup.sh
src/: __init__.py  config.py  create_bucket.py  projects.py  pubsub.py
tests/: __init__.py  test_sample.py
(+53 files in other folders)
